Fixed spacing at top and bottom of page

--- a/css/style.css
+++ b/css/style.css
@@ -220,7 +220,7 @@ header.masthead {
 }
 
 header.masthead .intro-text {
-  padding-top: 150px;
+  padding-top: 100px;
 }
 
 header.masthead .intro-text .intro-lead-in {
